# hyprland-tools

./: README.md  hyprtoolkit-headers.txt
button_dropdown/: CMakeLists.txt  make.sh
button_dropdown/src/: main.cpp
grid/: CMakeLists.txt  how to use box and grid.txt  make.sh
grid-search/: CMakeLists.txt  get_content.sh  text.txt
grid-search/src/: Box.hpp  SearchBox.hpp  main.cpp
grid/src/: Box.cpp  GridLayout.cpp  GridLayout.hpp  main.cpp
launcher/: CMakeLists.txt
launcher/old/grid/src/: main.cpp
launcher/old/list/: CMakeLists.txt  make.sh
launcher/old/list/src/: main.cpp
launcher/old/list_detailed/: CMakeLists.txt
launcher/old/list_detailed/src/: AppDatabase.hpp  AppItem.hpp  AppLauncher.hpp  DesktopApp.hpp  IconCache.hpp  main.cpp  main.cpp.bk
launcher/src/: ConfigManager.cpp  ConfigManager.hpp  main.cpp
searchview/: CMakeLists.txt
searchview/src/: SearchBox.cpp  main.cpp
teditor/: CMakeLists.txt  make.sh
teditor/src/: main.cpp
theme/: CMakeLists.txt  make.sh
theme/src/: main.cpp
toplayer/: CMakeLists.txt  make.sh
toplayer/src/: main.cpp
